[tool.poetry]
name = "infra-management"
version = "0.1.0"
description = ""
authors = ["Ivan <iv.cherepanov@yandex.ru>"]
readme = "README.md"
packages = [{include = "infra_management"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
